tests/ui/pub/pub-restricted-non-path.rs
#![feature(pub_restricted)]

pub (.) fn afn() {} //~ ERROR expected identifier

fn main() {}
